доработка поиска, разработка визуального редактора оргструктуры

--- a/escom-bpm-web/src/main/webapp/resources/css/icons.css
+++ b/escom-bpm-web/src/main/webapp/resources/css/icons.css
@@ -86,4 +86,6 @@
 .ico_save-20{background-image: url('../resources/icon/save-20.png') !important;}
 .ico_exit20 {background-image: url('../resources/icon/exit-20.png') !important;}
 .ico_enter20 {background-image: url('../resources/icon/enter-20.png') !important;}
-.ico_timer20 {background-image: url('../resources/icon/timer-20.png') !important;}
+.ico_timer20{background-image: url('../resources/icon/timer-20.png') !important;}
+.ico_user20{background-image: url('../resources/icon/user20.png') !important;}
+.ico_company20{background-image: url('../resources/icon/company-20.png') !important;}
