--- a/escom-bpm-web/src/main/webapp/view/common/dict-info.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/common/dict-info.xhtml
@@ -40,7 +40,7 @@
                             <ui:param name="_itemPanel" value="ownerPanel"/>
                             <ui:param name="_titleItem" value="#{bundle.Owner}"/>
                             <ui:param name="_selectorBean" value="#{userBean}"/>
-                            <ui:param name="_items" value="#{userBean.findAll()}"/>
+                            <ui:param name="_items" value="#{userBean.users}"/>
                             <ui:param name="_actionClear" value="setAuthor"/>
                             <ui:param name="_actionSelect" value="onChangeOwner"/>
                             <ui:param name="_update" value=""/>
