--- a/escom-bpm-web/src/main/webapp/view/staffs/staff-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/staffs/staff-card.xhtml
@@ -40,7 +40,7 @@
                     <ui:param name="_itemPanel" value="userPanel"/>
                     <ui:param name="_titleItem" value="#{bundle.User}"/>
                     <ui:param name="_selectorBean" value="#{userBean}"/>
-                    <ui:param name="_items" value="#{userBean.findAll()}"/>
+                    <ui:param name="_items" value="#{userBean.users}"/>
                     <ui:param name="_actionClear" value="setEmployee"/>
                     <ui:param name="_actionSelect" value="onEmployeeSelected"/>
                     <ui:param name="_update" value=""/>
