--- a/escom-bpm-web/src/main/webapp/view/users/assistants/assistant-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/users/assistants/assistant-card.xhtml
@@ -27,7 +27,7 @@
                     <ui:param name="_itemPanel" value="assistPanel"/>
                     <ui:param name="_titleItem" value="#{bundle.Assistant}"/>
                     <ui:param name="_selectorBean" value="#{userBean}"/>
-                    <ui:param name="_items" value="#{userBean.findAll()}"/>
+                    <ui:param name="_items" value="#{userBean.users}"/>
                     <ui:param name="_actionClear" value="setUser"/>
                     <ui:param name="_actionSelect" value="onChangeAssistant"/>
                     <ui:param name="_update" value=""/>
