доработка редактора оргструктуры

--- a/escom-bpm-web/src/main/webapp/resources/css/icons.css
+++ b/escom-bpm-web/src/main/webapp/resources/css/icons.css
@@ -89,3 +89,4 @@
 .ico_timer20{background-image: url('../resources/icon/timer-20.png') !important;}
 .ico_user20{background-image: url('../resources/icon/user20.png') !important;}
 .ico_company20{background-image: url('../resources/icon/company-20.png') !important;}
+.ico_importance-20{background-image: url('../resources/icon/importance-20.png') !important;}
