--- a/escom-bpm-web/src/main/webapp/view/staffs/orgstructure.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/staffs/orgstructure.xhtml
@@ -12,16 +12,27 @@
     </ui:define>
     
     <ui:define name="toolbarComponents" >
-        <h:panelGrid columns="2" styleClass="without-spaces">
-            <p:outputLabel value="#{bundle.Organization}:" for="company" indicateRequired="true"/>
+        <h:panelGrid columns="3" styleClass="without-spaces">
+            <p:outputLabel value="#{bundle.Organization}:" for="company"/>
             <p:selectOneMenu id="company" value="#{orgStructureBean.selectedCompany}" converter="companyConvertor"
-                             filter="true" filterMatchMode="startsWith"
-                             required="true" requiredMessage="#{bundle.Field} [#{bundle.Organization}] #{bundle.MustBeFilled}"
-                             disabled="#{!sessionBean.userAdmin}">
+                             filter="true" filterMatchMode="startsWith">
                 <f:selectItems value="#{orgStructureBean.companies}" var="org" itemLabel="#{org.name}" itemValue="#{org}" /> 
                 <f:selectItem itemValue="#{null}" itemLabel="#{bundle.EmptySelData}"/>
-                <p:ajax event="change" update="organigram" listener="#{orgStructureBean.onClearDiagram()}" oncomplete="return itemChange = 1;"/>
-            </p:selectOneMenu>
+                <p:ajax event="change" update="organigram actionsBtns" listener="#{orgStructureBean.initDiagram()}" oncomplete="return itemChange = 1;"/>
+            </p:selectOneMenu>       
+        
+            <h:panelGroup id="actionsBtns">
+                <p:commandButton icon="ui-icon-folder-collapsed" title="#{bundle.CollapseAll}"
+                                 rendered="#{orgStructureBean.selectedCompany != null}"
+                                 update="organigram"
+                                 actionListener="#{orgStructureBean.onCollapseAll()}">            
+                </p:commandButton>
+                <p:commandButton icon="ui-icon-folder-open" title="#{bundle.ExpandAll}"
+                                 update="organigram"
+                                 rendered="#{orgStructureBean.selectedCompany != null}"
+                                 actionListener="#{orgStructureBean.onExpandAll()}">            
+                </p:commandButton>
+            </h:panelGroup>
         </h:panelGrid>
     </ui:define>
 
@@ -29,69 +40,140 @@
         <h:panelGroup id="organigram">
             <p:organigram id="orgstruct" rendered="#{orgStructureBean.selectedCompany != null}" var="node"
                    widgetVar="organigram" value="#{orgStructureBean.rootNode}" selection="#{orgStructureBean.selection}"                   
-                   leafNodeConnectorHeight="5"
+                   leafNodeConnectorHeight="5" 
                    autoScrollToSelection="#{false}"
                    zoom="#{true}"                 
                    style="#{orgStructureBean.style}">
                 
-                <p:ajax event="dragdrop" process="@this" listener="#{orgStructureBean.nodeDragDropListener}" />
+                <p:ajax event="dragdrop" process="@this" listener="#{orgStructureBean.nodeDragDropListener}" update="organigram"/>
                 <p:ajax event="select" process="@this" listener="#{orgStructureBean.nodeSelectListener}" />
-                <p:ajax event="contextmenu" process="@this" />
+                <p:ajax event="contextmenu" process="@this" listener="#{orgStructureBean.nodeSelectListener}"/>
                 
-                <p:organigramNode style="width: auto; background-color: #C7C6C4;">
+                <p:organigramNode style="width: auto;">
                     <h:outputText value="#{node.data.shortName}" />
                 </p:organigramNode>
 
                 <p:organigramNode type="root"
                                   icon="ico_company20"
                                   style="width: auto; border-radius: 10px;">
-                    <h:outputText value="#{node.data.shortName}" />
+                    #{node.data.shortName}
                 </p:organigramNode>
 
                 <p:organigramNode type="division" 
                                   styleClass="division"
-                                  icon="ico-portfolio-16"
+                                  icon="ico-portfolio-16"                                  
                                   iconPos="left">
-                    <h:outputText value="#{node.data.shortName}" />
+                    #{node.data.shortName}
                 </p:organigramNode>
 
-                <p:organigramNode type="employee"
+                <p:organigramNode type="employee"                                  
                                   styleClass="employee"
                                   icon="ico_user20">
-                    <h:outputText value="#{node.data.shortName}" />
+                    #{node.data.shortName}
+                </p:organigramNode>
+                
+                <p:organigramNode type="vacant"                                  
+                                  styleClass="vacant"
+                                  icon="ico_importance-16">
+                    #{node.data.shortName}
                 </p:organigramNode>
             </p:organigram>
             
             <p:contextMenu for="orgstruct" nodeType="root">
-                <p:menuitem value="#{bundle.Open}"/>
+                <p:menuitem value="#{bundle.Edit}" 
+                            disabled="#{orgStructureBean.readOnly}"
+                            actionListener="#{orgStructureBean.onBeforOpenItem()}"
+                            oncomplete="document.getElementById('mainFRM:editCardBtn').click();"/>
+                <p:menuitem value="#{bundle.View}"                             
+                            oncomplete="document.getElementById('mainFRM:viewCardBtn').click();"/>
                 <p:separator/>
+                <p:menuitem value="#{bundle.MoveToTrash}"
+                            disabled="#{orgStructureBean.readOnly}"
+                            update="organigram" 
+                            actionListener="#{orgStructureBean.onMoveToTrash()}"
+                            />
             </p:contextMenu>
             
             <p:contextMenu for="orgstruct" nodeType="employee">
-                <p:menuitem value="#{bundle.Open}"/>
+                <p:menuitem value="#{bundle.Edit}"
+                            disabled="#{orgStructureBean.readOnly}"
+                            actionListener="#{orgStructureBean.onBeforOpenItem()}"
+                            oncomplete="document.getElementById('mainFRM:editCardBtn').click();"/>
+                <p:menuitem value="#{bundle.View}"                             
+                            oncomplete="document.getElementById('mainFRM:viewCardBtn').click();"/>
                 <p:separator/>
                 <p:menuitem value="#{bundle.MoveToTrash}"
                             update="organigram" 
-                            actionListener="#{orgStructureBean.onMoveStaffToTrash()}"
+                            disabled="#{orgStructureBean.readOnly}"
+                            actionListener="#{orgStructureBean.onMoveToTrash()}"
                             />
             </p:contextMenu>
- 
+            <p:contextMenu for="orgstruct" nodeType="vacant">
+                <p:menuitem value="#{bundle.Edit}"
+                            disabled="#{orgStructureBean.readOnly}"
+                            actionListener="#{orgStructureBean.onBeforOpenItem()}"
+                            oncomplete="document.getElementById('mainFRM:editCardBtn').click();"/>
+                <p:menuitem value="#{bundle.View}"                             
+                            oncomplete="document.getElementById('mainFRM:viewCardBtn').click();"/>
+                <p:separator/>
+                <p:menuitem value="#{bundle.MoveToTrash}"
+                            update="organigram" 
+                            disabled="#{orgStructureBean.readOnly}"
+                            actionListener="#{orgStructureBean.onMoveToTrash()}"
+                            />
+            </p:contextMenu>
+            
             <p:contextMenu for="orgstruct" nodeType="division">
-                <p:menuitem value="#{bundle.Open}"/>
+                <p:menuitem value="#{bundle.Edit}"
+                            disabled="#{orgStructureBean.readOnly}"
+                            actionListener="#{orgStructureBean.onBeforOpenItem()}"
+                            oncomplete="document.getElementById('mainFRM:editCardBtn').click();"
+                            />
+                <p:menuitem value="#{bundle.View}"                             
+                            oncomplete="document.getElementById('mainFRM:viewCardBtn').click();"/>
                 <p:separator/>
                 <p:menuitem value="#{bundle.CreateDepartament}"
-                            update="organigram"
+                            disabled="#{orgStructureBean.readOnly}"
+                            oncomplete="document.getElementById('mainFRM:createDepartBtn').click();"
                             />
                 <p:menuitem value="#{bundle.CreateStaff}"
-                            update="organigram"
+                            disabled="#{orgStructureBean.readOnly}"
+                            oncomplete="document.getElementById('mainFRM:createStaffBtn').click();"
                             />
                 <p:separator/>
                 <p:menuitem value="#{bundle.MoveToTrash}"
-                            actionListener="#{orgStructureBean.onMoveDepartToTrash()}"
+                            disabled="#{orgStructureBean.readOnly}"
+                            actionListener="#{orgStructureBean.onMoveToTrash()}"
                             update="organigram"
                             />
             </p:contextMenu>
         </h:panelGroup>
+    </ui:define>
+    
+    <ui:define name="form_scripts">
+        <p:commandButton id="editCardBtn" style="display: none;" rendered="#{orgStructureBean.canEdit}"
+                        actionListener="#{orgStructureBean.onEditItem()}"
+                        onstart="PF('statusDialog').show()"
+                        oncomplete="PF('statusDialog').hide();">
+            <p:ajax event="dialogReturn" update="organigram" listener="#{orgStructureBean.onAfterCloseItemCard}"/>
+        </p:commandButton>
+        <p:commandButton id="viewCardBtn" style="display: none;"
+                        actionListener="#{orgStructureBean.onViewItem()}"
+                        onstart="PF('statusDialog').show()"
+                        oncomplete="PF('statusDialog').hide();">            
+        </p:commandButton>
+        <p:commandButton id="createStaffBtn" style="display: none;"
+                        actionListener="#{orgStructureBean.onCreateStaff()}"
+                        onstart="PF('statusDialog').show()"
+                        oncomplete="PF('statusDialog').hide();">
+            <p:ajax event="dialogReturn" update="organigram" listener="#{orgStructureBean.onAfterCloseItemCard}"/>
+        </p:commandButton>
+        <p:commandButton id="createDepartBtn" style="display: none;"
+                        actionListener="#{orgStructureBean.onCreateDepartment()}"
+                        onstart="PF('statusDialog').show()"
+                        oncomplete="PF('statusDialog').hide();">
+            <p:ajax event="dialogReturn" update="organigram" listener="#{orgStructureBean.onAfterCloseItemCard}"/>
+        </p:commandButton>
     </ui:define>
     
     <ui:define name="customStyleCSS">
@@ -110,6 +192,16 @@
             background: -moz-linear-gradient(top, #88c048 0%, #69a038 100%);
             background: -webkit-linear-gradient(top, #88c048 0%,#69a038 100%);
             background: linear-gradient(to bottom, #88c048 0%,#69a038 100%);
+        }
+        .ui-organigram .ui-organigram-node.selected {
+            color: red;
+        }
+        .ui-organigram .ui-organigram-node.vacant{
+            width: auto;
+            background: #fffa00;
+            background: -moz-linear-gradient(top, #fffa00 0%, #ffb300 100%);
+            background: -webkit-linear-gradient(top, #fffa00 0%, #ffb300 100%);
+            background: linear-gradient(to bottom, #fffa00 0%, #ffb300 100%);
         }
         </style>
     </ui:define>
